tests/NormalTests/paczka2/big_fuzzy/63174773.err
Error in line 2: onQ3JzU1nA20n53,9
Error in line 14: 22Jw3fGZ S99 32,3
Error in line 10: 5pKFKElXYY7 A690 307,1
Error in line 37: onQ3JzU1 A20 88,3
Error in line 41: S5ho S99 58,6
Error in line 42: onQ3JzU1 A690 270,1
Error in line 56: CUhWxdV S99 72,7
Error in line 54: 22Jw3fGZ A690 58,9
Error in line 64: 5pKFKElXYY7 A20 81,9
Error in line 73: onQ3JzU1 A690 37,9
Error in line 76: 22Jw3fGZ S99 202,4
Error in line 78: 22Jw3fGZ A690 84,2
Error in line 86: CUhWxdV A28 94,9
Error in line 97: onQ3JzU1=A690=51,6
Error in line 98: 22Jw3fGZ A690 93,4
Error in line 91: onQ3JzU1 S99 66,8
Error in line 103: 22Jw3fGZ A28 64,40
Error in line 99: 22Jw3fGZ A20 52,1
Error in line 94: 5pKFKElXYY7 S99 4,3
Error in line 102: Y6Y3ZY8 A20 45,1
Error in line 104: 22Jw3fGZ A28 2,6
Error in line 111: 22Jw3fGZ A690 83,8
Error in line 141: 5pKFKElXYY7 S99 82,56
Error in line 136: onQ3JzU1 A28 3,4
Error in line 147: 5pKFKElXYY7 S99 412,2
Error in line 125: 22Jw3fGZ A20 29,7
Error in line 152: Y6Y3ZY8 A20 53,0
Error in line 159: CUhWxdV A20 179,4
Error in line 153: 22Jw3fGZ S99 50,1
Error in line 188: CUhWxdV A690 70,0
Error in line 181: S99 S99 28,7
Error in line 193: Y6Y3ZY8 S99 16,3
Error in line 199: 22Jw3fGZ S99 -1,9
Error in line 197: 22Jw3fGZ S99 1,3
Error in line 195: onQ3JzU1 S99 51,3
Error in line 205: onQ3JzU1 A20 38,8
Error in line 173: S5ho A690 69,6
Error in line 208: S5ho A28 94,3
Error in line 207: onQ3JzU1 S99 47,8
Error in line 204: Y6Y3ZY8 A20 204,7
Error in line 217: 22Jw3fGZ A28 26,8
Error in line 245: 22Jw3fGZ A690 13,4
